--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "laravel/reverb": "^1.0",
         "laravel/tinker": "^2.9",
         "livewire/livewire": "^3.5",
+        "openai-php/laravel": "^0.10.2",
         "pusher/pusher-php-server": "^7.2"
     },
     "require-dev": {
